@@ -3,6 +3,10 @@
 
 	* configure.in: bump minimum rep-gtk to 0.90.0
 
+	* lisp/sawfish/gtk/color-preview.jl
+	* lisp/sawfish/gtk/widgets/color.jl: removed GtkButton + GtkPreview + GtkColorSelection by GtkColorButton
+	                                     makes 1.5s sawfish-ui compatible with rep-gtk 0.90.0
+
 2009-09-05  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in: bump version to 1.5.2 ("Save The Robots")
 
